Icon-label alignment fix exlm-3940

--- a/scripts/user-actions/user-actions.css
+++ b/scripts/user-actions/user-actions.css
@@ -1,7 +1,6 @@
 .user-actions {
-  align-items: flex-start;
+  align-items: baseline;
   display: flex;
-  flex-wrap: wrap;
 }
 
 .user-actions button {
